// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`react-testing-library - BeerListContainer add beer 1`] = `
<ul>
  <li>
    Octoberfest
  </li>
</ul>
`;

exports[`react-testing-library - BeerListContainer add beer 2`] = `
<ul>
  <li>
    Octoberfest
  </li>
  <li>
    Killingbear
  </li>
</ul>
`;
